# military-p2p

./: .gitignore  Cargo.toml  Dockerfile  README.md  demo.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
crates/mp-crypto/: Cargo.toml
crates/mp-crypto/src/: aes.rs  error.rs  hash.rs  lib.rs  merkle.rs  rsa_keys.rs
crates/mp-network/: Cargo.toml
crates/mp-network/src/: cert.rs  client.rs  error.rs  handlers.rs  lib.rs  server.rs  tls.rs
crates/mp-network/tests/: e2e_test.rs
crates/mp-node-commander/: Cargo.toml
crates/mp-node-commander/src/: init.rs  main.rs  read.rs  serve.rs
crates/mp-node-general/: Cargo.toml
crates/mp-node-general/src/: dispatch.rs  init.rs  load_csv.rs  main.rs
crates/mp-protocol/: Cargo.toml
crates/mp-protocol/src/: api.rs  commander.rs  error.rs  lib.rs  multi_message.rs  operation.rs  raid.rs
crates/mp-storage/: Cargo.toml
crates/mp-storage/migrations/commander/: 20260101000001_create_self_info.sql  20260101000002_create_peer_directory.sql  20260101000003_create_operations.sql  20260101000004_create_parts.sql
crates/mp-storage/migrations/general/: 20260101000001_create_units.sql  20260101000002_create_commanders.sql  20260101000003_create_operations.sql  20260101000004_create_operation_recipients.sql
crates/mp-storage/src/: error.rs  lib.rs  pool.rs
crates/mp-storage/src/commander/: commander_test.rs  mod.rs  operations.rs  parts.rs  peers.rs  self_info.rs
crates/mp-storage/src/general/: commanders.rs  mod.rs  operations.rs  units.rs
crates/mp-storage/tests/: commander_test.rs  general_test.rs
data/: commanders.csv
