[package]
name = "mp-node-commander"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
mp-crypto.workspace = true
mp-protocol.workspace = true
mp-storage.workspace = true
mp-network.workspace = true
