[package]
name = "mp-storage"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true
mp-protocol.workspace = true
mp-crypto.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
